# paramarket

./: .gitignore  .vercelignore  ACTIVATE_STEPS.md  Anchor.toml  BUILD_SPEC.md  Cargo.toml  DEMO_SCRIPT.md  EVAL_STAGE2.md  EVAL_STAGE3.md  EVAL_STAGE4.md  EVAL_STAGE6.md  FEATURE_GAP_TOP_FIELD.md  LIVE_FEATURE_AUDIT_STAGE7.md  README.md  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/challenge/: page.tsx
app/components/: AuditPacket.tsx  DashboardOverview.tsx  DashboardShell.tsx  FieldScan.tsx  HomeExperience.tsx  JudgeModeRail.tsx  MarketLifecycle.tsx  ProofStoryScene.tsx  ReceiptVerifier.tsx  ReplayMarket.tsx  StoryWalkthrough.tsx
app/evidence/: page.tsx
app/lib/: constants.ts  marketEvidence.ts  proofProgress.ts  receiptVerifier.ts  spikeIdl.ts
app/markets/: page.tsx
app/proofs/: page.tsx
app/replay/: page.tsx
evidence/: receipt-settlement.json  stage1-false.json  stage1-true.json  stage2-t1-claim.json  stage2-t1-init.json  stage2-t1-settle.json  stage2-t2-claim.json  stage2-t2-init.json  stage2-t2-settle.json  stage2-t3-claim.json  stage2-t3-init.json  stage2-t3-settle.json
programs/paramarket/: Cargo.toml
programs/paramarket-spike/: Cargo.toml
programs/paramarket-spike/src/: lib.rs
programs/paramarket/src/: lib.rs
public/stage4/: receipt-proof.json  replay-events.json
scripts/: check-evidence.ts  generate-stage4-assets.ts  probe-tampers.ts  save-evidence.ts
src/client/: activate.ts  auth.ts  config.ts  settleSpike.ts  smoke.ts  stream.ts  (+1 more)
tests/: paramarket.ts  pricing.test.ts  stream.test.ts
(+1 files in other folders)
